# g2a-auctio

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  startscript.sh
docs/: Makefile  conf.py  index.rst
src/g2a_auctio/: G2ALogin.py  Utility.py  __init__.py  main.py  skeleton.py  test.py
tests/: conftest.py  test_skeleton.py
